# AINutritionTracker

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  check_gemini_limits.py  start.ps1  start.sh
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/skills/commit/: SKILL.md
.claude/skills/validate-food/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: .env.example  build_usda_db.py  check_alias.py  check_aliases.py  list_misses.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/core/: __init__.py  auth.py  config.py  database.py  lifespan.py  logging_config.py  nutrients.py  request_context.py  security.py
backend/routers/: admin.py  auth.py  config.py  foods.py  meals.py  nutrition.py  profiles.py  users.py
backend/services/: admin_query.py  auth_service.py  gemini_service.py  meal_service.py  nutrition_db.py  summary_service.py  usda_local_search.py  usda_service.py  user_service.py  vision_service.py
backend/services/nutrition_data/: __init__.py  aliases.py  config.py  mock.py  nutrient_map.py
backend/tests/: test_admin_query.py  test_app_routing.py  test_auth.py  test_config_migration.py  test_foods_api.py  test_gemini_service.py  test_nutrition_db.py  test_usda_local_search.py  test_usda_service.py  test_vision_service.py
docs/: audit-findings-2026-06-16.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  constants.js  index.css
frontend/src/api/: client.js
frontend/src/components/layout/: AccountMenu.jsx  BottomNav.jsx  Layout.jsx  ProfileMenu.jsx  TopBar.jsx
frontend/src/components/meal/: FatBreakdown.jsx  GroupedMealCard.jsx  MacroHighlights.jsx  MacroRing.jsx  MealCard.jsx  MealDetailModal.jsx  MicroGrid.jsx
frontend/src/components/profile/: PinPad.jsx
frontend/src/components/settings/: ApiKeyCard.jsx  SettingsSection.jsx
frontend/src/components/shared/: ConfirmModal.jsx  EmptyState.jsx  Spinner.jsx  Toast.jsx
frontend/src/components/summary/: MacroProgressBar.jsx
frontend/src/context/: AuthContext.jsx  LogDraftContext.jsx  ProfileContext.jsx
frontend/src/hooks/: useMealModal.js
frontend/src/pages/: ChangePassword.jsx  Home.jsx  LogMeal.jsx  Login.jsx  Monthly.jsx  ProfileSelect.jsx  Register.jsx  Settings.jsx  Timeline.jsx
frontend/src/utils/: format.js  goals.js  macros.js  nutrients.js  uid.js
