[project]
name = "nutriai-backend"
version = "1.0.0"
description = "NutriAI — two-stage (vision LLM + USDA) nutrition tracker backend"
requires-python = ">=3.14"
# Runtime dependencies. Managed with uv (uv.lock is the source of truth); requirements.txt
# is a generated export (uv export) kept as a pip fallback for the start scripts.
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "python-multipart==0.0.12",
    "google-genai==2.9.0",
    "groq==1.4.0",
    "ollama==0.6.2",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "aiofiles==23.2.1",
    "scalar-fastapi==1.8.2",
    # Observability: Prometheus /metrics + Sentry error tracking (Sentry is inert unless
    # SENTRY_DSN is set, see main.py).
    "prometheus-fastapi-instrumentator==7.0.0",
    "sentry-sdk[fastapi]==2.19.2",
    # Authentication: password hashing (bcrypt) + JWT access/refresh tokens (PyJWT).
    "bcrypt==5.0.0",
    "pyjwt==2.13.0",
]

# Dev-only tooling (installed by `uv sync`, excluded from `uv sync --no-dev` and the Docker image).
[dependency-groups]
dev = [
    "ruff==0.15.17",  # >=0.9 required for the py314 ruff target below
    "pytest==8.3.4",
]

[tool.uv]
# This is an application, not a distributable package — don't try to build/install it.
package = false

[tool.pytest.ini_options]
# The existing tests are stdlib unittest-style; pytest discovers and runs them. pythonpath="."
# lets them import main/core/services when run from backend/ (no installed package).
testpaths = ["tests"]
pythonpath = ["."]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter). Runtime deps live above; this block is unchanged.
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, pyupgrade
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/File/Form/Query are called in argument defaults by design — that's
# the framework idiom, not the B008 mutable-default footgun.
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Query", "fastapi.Path",
]

[tool.ruff.lint.per-file-ignores]
# main.py intentionally calls load_dotenv()/configure_logging() before importing app
# modules, so imports aren't all at the top of the file.
"main.py" = ["E402"]
# Tests stub modules / set up the cache DB before importing the code under test, and
# carry long literal JSON fixtures that don't wrap cleanly.
"tests/*" = ["E402", "E501"]
# The NUTRITION_PROMPT literal embeds compact-JSON schema/examples that must stay on one
# line each; they can't be wrapped without changing the prompt the model receives.
"services/vision_service.py" = ["E501"]
